[package]
name = "qgateway_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base
futures = "0.3"
tokio = { version = "1.15.0", features = ["full"] }

url = "2.0.0"
tokio-tungstenite = "*"

once_cell = "1.9.0"

protobuf = "3.0.3"

[build-dependencies]
protoc = "2.27.1"